added filter by price, name, year and time
